v1.1.4
- fixed injecting loot tables
v1.1.3
- fixed leather dropping from horses
- fixed millstone loot table
- fixed fowl takes fall damage
- injecting loot table instead of providing data pack
- added flint workbench recipe for boats
- saplings drops from dirt with low chance
- bones and sticks drops also from gravel, sand or dirt
- changed stone chest opening/closing sound
- chopping with wood in offhand
- fixed problem with animal and structure spawning configuration
v1.1.2
- fixed server only crash #9
- added terracotta and pot recipes for flint workbench
- added thatch block, stairs and slab
v1.1.1
- completed advancement tree, fixed grammar thanks to 'n00balakis'
- gated usage of vanilla crafting table after finishing stone age
- replaced vanilla stone tools with improved stone tools
- fixed crash when running server-side only
- fixed interaction with another mods
v1.1.0
- improved configuration for better mod setup by modders
- added cobweb mesh
- fixed grammar, thanks to 'n00balakis'
- renamed and reworked antler tools to bone tools, tools now have random chance to good/bad additional properties
- fixed issue with flint workbench wrong recipe detection
- render ghost crafting result when valid recipe available in flint workbench
v1.0.5
- added generated structures - abandoned camp and burial place
- added fishing net
v1.0.4
- added meat for all new mobs
- fixed metadata cleared when put into flint workbench
- fixed saber-tooth tigers spawning like hell
- implemented in-game manual
- fixed crash when new mob raids beetroot
v1.0.3
- aquaduct water can flow downward (aquaduct below is filled)
- fixed missing saber-tooth loot table
- fixed wood material blocks cannot be harvested by axe
v1.0.2
- added backpack
- configurable aquaduct effect range, fill per tick and use per tick
- all blocks from wood material harvestable only with axe
- added rhino tusk and saber teeth
- added woolly rhino entity
- added saber-tooth tiger entity